fix: responsive issues on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@ body {
 
 h1 {
   font-family: 'Raleway';
-  font-size: 2.7rem;
+  font-size: 2.6rem;
   font-variation-settings: "wght" 750;
 }
 
